# openvpn-build

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.rst  LICENSE  LICENSE.BSD  README  README.md  README.rst  create-release-files.sh  make-openvpn-release.sh  renovate.json  sign-and-push.sh  vars.example  verify-openvpn-release.sh
.github/: renovate-config.json
.github/workflows/: build-binary.yaml  build.yaml  ccpp.yml  depgraph.yaml  renovate.yaml
config/: base.conf  variants.conf  version.conf
debian-sbuild/: COPYING  README.md
debian-sbuild/config/: base.conf  variants.amd64.conf  variants.arm64.conf  variants.conf  version.conf
debian-sbuild/openvpn/: bullseye  changelog-2.3.13  changelog-2.3.14  changelog-2.3.16  changelog-2.3.17  changelog-2.3.18  changelog-2.4.0  changelog-2.4.10  changelog-2.4.11  changelog-2.4.3  changelog-2.4.4  changelog-2.4.6  changelog-2.4.7  changelog-2.4.9  changelog-2.4_alpha2  changelog-2.4_beta1  changelog-2.4_beta2  changelog-2.5.0  changelog-2.5.1  changelog-2.5.3  changelog-2.5.6  changelog-2.5.8  changelog-2.5_beta1  changelog-2.5_beta3  changelog-2.5_rc3  changelog-2.6.0  changelog-2.6.1  changelog-2.6.10  changelog-2.6.11  changelog-2.6.12  changelog-2.6.13  changelog-2.6.14  changelog-2.6.15  changelog-2.6.16  changelog-2.6.17  changelog-2.6.18  changelog-2.6.19  changelog-2.6.2  changelog-2.6.20  changelog-2.6.21  (+37 more)
debian-sbuild/openvpn-dco-dkms/: changelog-0.2.20230323  changelog-0.2.20230426  changelog-0.2.20231010  changelog-0.2.20231117  changelog-0.2.20240320  changelog-0.2.20240612  changelog-0.2.20240619  changelog-0.2.20240712  changelog-0.2.20241216  changelog-0.2.20250718  changelog-0.2.20250801  changelog-0.2.20250922  changelog-0.2.20251017  changelog-0.2.20260526  debian-11  ubuntu-2004  ubuntu-2210  ubuntu-2404  ubuntu-2410  ubuntu-2504
debian-sbuild/openvpn-dco-dkms/buster/debian/: control  rules
debian-sbuild/openvpn-dco-dkms/focal/debian/: rules
debian-sbuild/openvpn-dco-dkms/lunar/debian/: changelog  dkms  rules
debian-sbuild/openvpn/resolute/: ubuntu-2404  ubuntu-2604
debian-sbuild/ovpn-backports/: changelog-6.15.0.2025052801  changelog-6.15.0.2025052802  changelog-6.15.0.2025061700  changelog-6.17.0.2025100701  changelog-6.17.0.2025102200  changelog-6.17.0.2025112700  changelog-7.0.0.2026030300  changelog-7.0.0.2026032400  changelog-7.1.0-2026060500  changelog-7.1.0.2026070800
debian-sbuild/packaging/: changelog-2.4.2  changelog-2.4.5  changelog-2.4.8  changelog-2.4_rc1  changelog-2.4_rc2  changelog-2.5.2  changelog-2.5.4  changelog-2.5.5  changelog-2.5_beta2  changelog-2.5_beta4  changelog-2.5_rc1  changelog-2.6_rc1  ubuntu-1804
debian-sbuild/scripts/: build-all.sh  freight-add-many.py  prepare-all.sh  setup.sh  setup_chroots.sh  update-all.sh
generic/: COPYING  ChangeLog  README  build  build.vars  gentoo.config-0.9.8
generic/mingw64/: build
generic/patches/: lzo-001-windll.patch  openssl-1.1.0j-issue7653.patch  pkcs11-helper-001-RFC7512.patch
msvc/: README  build-env.bat  build.bat  unzip.js  wget.js
packaging/: changelog-2.3.15  changelog-2.4.1  changelog-2.5.7  changelog-2.5_rc2  squeeze  wheezy
packaging/bionic/debian/: README.Debian  changelog  control  openvpn.lintian-overrides  postinst  prerm  rules
packaging/bullseye/debian/: control
packaging/buster/debian/: control  rules
packaging/focal/debian/: control
packaging/jammy/debian/: control  rules
packaging/jessie/debian/: changelog  control  openvpn.init.d  rules
packaging/kinetic/debian/: control  openvpn.service
packaging/lucid/debian/: changelog  control  rules
packaging/lucid/debian/po/: es.po  (+4 more)
packaging/openvpn-with-openssl-0.9.8/debian/: changelog  openvpn.init.d  templates  update-resolv-conf
packaging/openvpn-with-openssl-1.0.0/debian/: default
packaging/precise/debian/: NEWS  changelog  control
packaging/stretch/debian/: changelog  control  rules
packaging/trusty/debian/: README.Debian  changelog  control  default  openvpn.if-up.d  openvpn.init.d  rules
packaging/wheezy/debian/: README.Debian  openvpn.if-down.d  postinst
packaging/xenial/debian/: changelog  control  openvpn.init.d  openvpn@.service  rules
release/: .gitignore  README.md  create-release-files.sh  debian-package-build.sh  full-release-build.sh  ovpn-man2html.awk  sign-and-push.sh  source-build.sh  vars.example  vars.infrastructure.example  verify-openvpn-release.sh  version-and-tags.sh  windows-installer-build.sh
release/templates/: forum.bb  mail.txt  trac.wiki
scripts/: build-all.sh  freight-add-all.py  freight-add-many.py  install-build-deps.sh  prepare-all.sh  setup.sh  setup_chroots.sh  update-all.sh
windows-msi/: .gitattributes  CMakeLists.txt  Makefile  README.rst  boot.wsf.in  build-and-package-env-sample.ps1  build-and-package.ps1  build-openvpn-gui.ps1  build.wsf  bump-version.m4.ps1  bump-version.m4.sh  bump-version.ps1  bump-version.sh  cleanup.ps1  concat_files.cmake  convert_to_crlf.cmake  gui.wxs  msbuild-x64.bat  msbuild-x64_arm64.bat  msbuild-x64_x86.bat  msi.wxs  sign-binaries.bat  sign-exe.bat  sign-msi.bat  sign-openvpn.bat  version.cmake  version.m4
windows-msi/artwork/: license.txt
windows-msi/bookmarks/: howto.url  support.url  website.url  wiki.url
windows-msi/doc/: INSTALL-win32.txt.in  LicenseAgreement.rtf  README-config-auto.txt.in  README-config.txt.in  README-log.txt.in  bundled-licenses.txt
windows-msi/doc/config/: README.txt.in  Where are my config files.txt.in
windows-msi/doc/config-auto/: README.txt.in
windows-msi/doc/doc/: INSTALL-win32.txt.in
windows-msi/lzma1805/: README.rst
windows-msi/script/: ACL.js  ActiveSetupCA.js  Builder.js  M4Parser.js  PlapReg.js  RegisterEventSource.js  Service.js  String.js
windows-msi/vcpkg-ports/: readme.txt
windows-msi/vcpkg-ports/openssl/: portfile.cmake  vcpkg.json
windows-msi/vcpkg-ports/openssl/windows/: portfile.cmake
windows-nsis/: DotNetChecker.nsh  INSTALL-win32.txt  LICENSE.rst  README  StrStr.nsi  build  build-complete  build-complete.vars  build-snapshot  openvpn.nsi  setpath.nsi
(+225 files in other folders)
